--- a/.github/workflows/fetch-feeds.yml
+++ b/.github/workflows/fetch-feeds.yml
@@ -3,7 +3,9 @@ name: Fetch MMA News Feeds
 on:
   schedule:
     # Run every 6 hours
-    - cron: '0 */6 * * *'
+    - cron: '0 7-17 * * 1-5'
+    - cron: '0 17-23,0-2 * * 6'
+    - cron: '0 9-12 * * 0'
   # Allow manual trigger
   workflow_dispatch:
 
