--- a/.github/workflows/fetch-feeds.yml
+++ b/.github/workflows/fetch-feeds.yml
@@ -2,18 +2,22 @@ name: Fetch MMA News Feeds
 
 on:
   schedule:
-    # Run every 6 hours
-    - cron: '0 7-17 * * 1-5'
-    - cron: '0 17-23,0-2 * * 6'
-    - cron: '0 9-12 * * 0'
-  # Allow manual trigger
+    # Mon-Fri: every 3 hours 7am-5pm EST
+    - cron: '0 12,15,18,21,0,2 * * 1-5'
+    # Sat: every hour 5pm-2am EST
+    - cron: '0 22,23,0,1,2,3,4,5,6 * * 6'
+    # Sun: every hour 9am-12pm EST
+    - cron: '0 14,15,16,17 * * 0'
   workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
   fetch-feeds:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -30,8 +34,9 @@ jobs:
           python fetch_feeds.py
 
       - name: Commit and push changes
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add -A
-          git diff --quiet && git diff --staged --quiet || (git commit -m "Update MMA news feeds" && git push)
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: Update MMA news feeds
+          file_pattern: docs/mma-news.json
+          commit_user_name: github-actions[bot]
+          commit_user_email: github-actions[bot]@users.noreply.github.com
