--- a/.github/workflows/fetch-feeds.yml
+++ b/.github/workflows/fetch-feeds.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install feedparser python-dateutil
+          pip install feedparser python-dateutil requests
 
       - name: Fetch RSS feeds
         run: |
