--- a/config_mma.yaml
+++ b/config_mma.yaml
@@ -20,6 +20,10 @@ sources:
       url: https://www.youtube.com/feeds/videos.xml?channel_id=UCRlvF4jIeBWqXJDGNXfPyVw
     - name: Demetrious Johnson YouTube
       url: https://www.youtube.com/feeds/videos.xml?channel_id=UCk9lx4sKRQCDTyXFaouk_vQ
+    - name: Daniel Cormier YouTube
+      url: https://www.youtube.com/feeds/videos.xml?channel_id=UC_1TBgZ5FuGSdRlrrnyJU7w
+    - name: Michael Bisping YouTube
+      url: https://www.youtube.com/feeds/videos.xml?channel_id=UCDrG2_1TcVkXKXXsD6Kjwig
 
   # Alternative YouTube config (if using channel_id lookup)
   youtube_feeds:
